Add base 'generate environment' command

--- a/data/lang/en.json
+++ b/data/lang/en.json
@@ -168,7 +168,7 @@
     "help:askCharSub": "Asks a question about your characters.",
     "help:askWorldSub": "Asks a question about your world.",
     "help:askFooter": "`ask char` can also be run as `ask c`. `ask world` can also be run as `ask w`.",
-    
+
     "help:challengeSub": "Generates a totally random writing challenge.",
     "help:challengeEasySub": "Generates a totally random writing challenge at 5 wpm. 20xp for completion.",
     "help:challengeNormalSub": "Generates a totally random writing challenge at 10 wpm. 40xp for completion.",
@@ -181,9 +181,9 @@
     "help:challengeCancelSub": "Cancels your current challenge.",
     "help:challengeCompleteSub": "Completes your current challenge.",
     "help:challengeFooter": "WPM = Words Per Minute",
-    
+
     "help:8ballSub":"Ask a question to an 8ball.",
-    
+
     "help:eventCreateSub": "Create an event called 'My Event Title'.",
     "help:eventRenameSub": "Rename event to 'My New Event Title'.",
     "help:eventDescSub": "Set the description of the event  to 'This is the description'.",
@@ -199,9 +199,9 @@
     "help:eventTopSub": "Checks the word count leaderboard for the current event.",
     "help:eventInfoSub": "Checks the info/status of the event.",
     "help:eventFooter": "`event create`, `event rename`, `event description`, `event image`, `event delete`, `event start`, and `event end` all required the MANAGE_MESSAGES permission.",
-    
+
     "help:flipSub": "Flips a coin.",
-    
+
     "help:generateCharSub": "Generates 10 character names.",
     "help:generatePlaceSub": "Generates 10 fantasy place names.",
     "help:generateBookSub": "Generates 10 general fiction book titles.",
@@ -216,6 +216,7 @@
     "help:generatePlace20Sub": "Generates 20 place names (Place can be changed to any of the above choices. 20 can be changed to you desired amount.)",
     "help:generateLandSub": "Generates 10 random fantasy land names",
     "help:generateFace": "Generates a random face for your character.",
+    "help:generateEnvironment": "Generates a random environment as prompt.",
     "help:generateFooter": "",
 
     "help:goalSub": "Prints a list of all your goals and their statuses.",
@@ -229,7 +230,7 @@
     "help:mysettingTzSub": "Sets your timezone. (America/New_York can be changed to your desired timezone.)",
     "help:mysettingUrlSub": "https://kevinnovak.github.io/Time-Zone-Picker/",
     "help:mysetting:footer": "For the timezone setting, make sure the value you specify is a valid TZ name from this page: https://kevinnovak.github.io/Time-Zone-Picker/",
-    
+
     "help:pingSub": "Displays the amount of latency between the bot and the client.",
 
     "help:profileSub": "Displays your Writer Bot profile and statistics.",
@@ -257,7 +258,7 @@
     "help:resetXpSub": "Resets your xp/level to 0.",
     "help:reset:projects": "Deletes all of your projects.",
     "help:resetAllSub": "Resets your xp/level, stats, records, goals, challenges and projects.",
-    
+
     "help:rollSub": "Rolls on 6-sided die.",
     "help:roll8Sub": "Rolls one 8-sided die.(8 can be changed out for your desired number. Max is 100.",
     "help:roll3d20Sub": "Rolls three 20-sided dice. (3 can be changed out for you desired number, max is 100. 20 can be changed out for you desired number.)",
@@ -414,6 +415,7 @@
     "generate:type:book_rom": "romance/erotic book titles",
     "generate:type:idea": "story ideas",
     "generate:type:prompt": "prompts",
+    "generate:type:environment": "environments",
 
     "sprint:argument:cmd": "What are you trying to do with the sprint command? `start`, `cancel`, `join`, etc...?",
     "sprint:cancelled": "**Sprint has been cancelled**: ",
